Refs #5431 Add preview overlay for all images.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <script type="text/javascript" src="_static/underscore.js"></script>
             <script type="text/javascript" src="_static/doctools.js"></script>
             <script type="text/javascript" src="_static/bootstrap-dropdown.js"></script>
+            <script type="text/javascript" src="_static/jquery.tools.min.js"></script>
+            <script type="text/javascript" src="_static/bootstrap-custom.js"></script>
         <link rel="top" title="EEA 6.0 documentation" href="#"/>
             <link rel="next" title="EEA Daviz" href="docs/eea.daviz/index.html"/> 
     <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
