--- a/search.html
+++ b/search.html
@@ -27,6 +27,8 @@
             <script type="text/javascript" src="_static/doctools.js"></script>
             <script type="text/javascript" src="_static/searchtools.js"></script>
             <script type="text/javascript" src="_static/bootstrap-dropdown.js"></script>
+            <script type="text/javascript" src="_static/jquery.tools.min.js"></script>
+            <script type="text/javascript" src="_static/bootstrap-custom.js"></script>
         <link rel="top" title="EEA 6.0 documentation" href="index.html"/>
   <script type="text/javascript">
     jQuery(function() { Search.loadIndex("searchindex.js"); });
