--- a/src/themes/sphinx-bootstrap/layout.html
+++ b/src/themes/sphinx-bootstrap/layout.html
@@ -102,7 +102,7 @@
                 HAS_SOURCE:  {{ has_source|lower }}
             };
         </script>
-        {%- for scriptfile in script_files + ["_static/bootstrap-dropdown.js"] %}
+        {%- for scriptfile in script_files + ["_static/bootstrap-dropdown.js", '_static/jquery.tools.min.js', '_static/bootstrap-custom.js'] %}
             <script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
         {%- endfor %}
 
