--- a/src/themes/sphinx-bootstrap/layout.html
+++ b/src/themes/sphinx-bootstrap/layout.html
@@ -85,6 +85,7 @@
     <link href='http://fonts.googleapis.com/css?family=Crete+Round' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ pathto('_static/' + style, 1) }}" type="text/css"/>
     <link rel="stylesheet" href="{{ pathto('_static/pygments.css', 1) }}" type="text/css"/>
+    <link rel="stylesheet" href="{{ pathto('_static/daviz-tutorials.css', 1) }}" type="text/css"/>
     {%- for cssfile in css_files %}
         <link rel="stylesheet" href="{{ pathto(cssfile, 1) }}" type="text/css"/>
     {%- endfor %}
@@ -102,7 +103,7 @@
                 HAS_SOURCE:  {{ has_source|lower }}
             };
         </script>
-        {%- for scriptfile in script_files + ["_static/bootstrap-dropdown.js", '_static/jquery.tools.min.js', '_static/jquery.jfeed.js', '_static/bootstrap-custom.js'] %}
+        {%- for scriptfile in script_files + ["_static/bootstrap-dropdown.js", '_static/jquery.tools.min.js', '_static/jquery.jfeed.js', '_static/bootstrap-custom.js', '_static/daviz-tutorials.js'] %}
             <script type="text/javascript" src="{{ pathto(scriptfile, 1) }}"></script>
         {%- endfor %}
 
