--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   	left: 0;
   	width: 100%;
   	height: 100%;
-  	background-color: rgb(43,160,199);
+  	background-color: #733D85;
   	animation: cssload-fold-thecube 2.76s infinite linear both;
   		-o-animation: cssload-fold-thecube 2.76s infinite linear both;
   		-ms-animation: cssload-fold-thecube 2.76s infinite linear both;
