--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   <script type="text/javascript">
     var href = window.location.href;
     if(href.indexOf('/docs/eea') !== -1){
-      href.replace('/docs/eea', '/docs/IT-systems/eea');
+      href = href.replace('/docs/eea', '/docs/IT-systems/eea');
       window.location = href;
     }
   </script>
