--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   }
 
   </style>
-  <meta http-equiv="refresh" content="1.5; url=https://eea.github.io/docs" />
+  <meta http-equiv="refresh" content="1.5; url=https://eea.github.io/volto-eea-design-system" />
 </head>
 <body>
   <div class="loading">
