Use main brand color

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
       text-align: center;
       display: block;
       width: 99%;
-      color: #ccc;
+      color: #007B6C;
     }
   </style>
 </head>
@@ -20,16 +20,10 @@
     <p>Trying to send you back...</p>
   </section>
   <script type="text/javascript">
-    var href = window.location.href;
-    if(href.indexOf('/docs/eea') !== -1){
-      href = href.replace('/docs/eea', '/docs/IT-systems/eea');
-      window.location = href;
-    }else{
       setTimeout(function(){
         window.location = "http://eea.github.io";
       },
       5000);
-    }
   </script>
 </body>
 </html>
